# sauron

./: .gitignore  .npmignore  AGENTS.md  Cargo.toml  README.md  go.mod  go.sum  install.sh  package.json  pyproject.toml
.agents/skills/cobra-glamour-cli/: SKILL.md
.agents/skills/modal-go-sandbox/: SKILL.md
.github/workflows/: release.yml
adrs/: 0001-go-cli-architecture.md  0002-agent-ready-browser-workspace-startup.md
benchmarks/: latest-scorecard.json
cmd/sauron/: main.go
distribution/: targets.json
docs/: agent-browser-scorecard.md
examples/: pptr.js  pw.js  pw.py
internal/cli/: cli_test.go  health.go  list.go  output.go  root.go  start.go  stop.go
internal/sauron/: manager.go  manager_test.go  modal_service.go  modal_service_test.go  state_store.go  state_store_test.go  types.go
plans/: agent-browser-parity-plus-execplan.md
scripts/: benchmark-matrix.sh  release-version.mjs  stage-npm-binaries.mjs
specs/: npm-distribution.md  remove-response-version-key.md  responsive-screenshots.md  v2-integration.md  viewport-flag.md  webgl-default-mode.md
src/: artifacts.rs  broker.rs  broker_protocol.rs  browser.rs  cdp.rs  config.rs  context.rs  daemon.rs  diff.rs  engine.rs  errors.rs  locators.rs  main.rs  page_cache.rs  policy.rs  runtime.rs  session.rs  snapshot.rs  snapshot_nodes.rs  types.rs
src/sauron/: app.py
tests/: runtime_workflow.rs
