[package]
name = "sauron"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Headless Chrome daemon + agent-friendly CLI (Rust)"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "time", "sync", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
thiserror = "1.0"
directories = "5.0"
regex = "1.10"
url = "2.5"
chrono = { version = "0.4", features = ["clock"] }
rand = "0.8"
base64 = "0.22"
which = "6.0"
fs2 = "0.4"
uuid = { version = "1.8", features = ["v7", "serde"] }
redis = "0.27"
sha2 = "0.10"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28", features = ["signal", "process"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Threading"] }
